fixed services spacing

--- a/style.scss
+++ b/style.scss
@@ -59,16 +59,6 @@ h3 {
   margin: 0px;
   display:inline;
 }
-h4 {
-  font-family: 'Lato', Verdana, Helvetica, sans-serif;
-  font-size: 14px;
-  font-weight: 700;
-  font-display: auto;
-  padding: 0px;
-  margin: 0px;
-  display:inline;
-  line-height: 1px;
-}
 
 h1 {
   font-family: 'Lato', Verdana, Helvetica, sans-serif;
